--- a/testapp/templates/testapp/lower.html
+++ b/testapp/templates/testapp/lower.html
@@ -2,9 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Lower</title>
 </head>
 <body>
+{% load static %}
+    {%load cust_filters template.Library()%}
+    {% for r in data_list %}
+    <ul>
+    <li>{{r.name|t_n:6}}</li>
+    <li>{{r.subject|t_n:3}}</li>
+    <li>{{r.dept|t_n:2}}</li>
+    <li>{{r.date}}</li>
+    </ul>
+    <hr>
+
+    {%endfor%}
+
 
 </body>
 </html>
