--- a/testapp/templates/testapp/upper.html
+++ b/testapp/templates/testapp/upper.html
@@ -2,9 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Lower</title>
 </head>
 <body>
+    {% for r in data_list %}
+    <ul>
+    <li>{{r.name|upper}}</li>
+    <li>{{r.subject|upper}}</li>
+    <li>{{r.dept|upper}}</li>
+    <li>{{r.date|upper}}</li>
+    </ul>
+    <hr>
+
+    {%endfor%}
+
 
 </body>
 </html>
